cncProd/force-app/main/default/objects/Model_Subscribed_Staging__c/fields/Model_Subscribed__c.field-meta.xml
<CustomField>
    <fullName>Model_Subscribed__c</fullName>
    <label>Model Subscribed</label>
    <referenceTo>Model_Subscribed__c</referenceTo>
    <relationshipLabel>Model Subscribed Staging</relationshipLabel>
    <relationshipName>Model_Subscribed_Staging</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>