cncProd/force-app/main/default/objects/Model_Subscribed_Staging__c/fields/Subscribed_Make__c.field-meta.xml
<CustomField>
    <fullName>Subscribed_Make__c</fullName>
    <formula>Model_Subscribed__r.Make__c</formula>
    <label>Subscribed Make</label>
    <type>Text</type>
</CustomField>