cncProd/force-app/main/default/objects/Model_Subscribed_Staging__c/fields/Subscribed_Model__c.field-meta.xml
<CustomField>
    <fullName>Subscribed_Model__c</fullName>
    <formula>Model_Subscribed__r.Model_Name__c</formula>
    <label>Subscribed Model</label>
    <type>Text</type>
</CustomField>