cncProd/force-app/main/default/objects/Model_Subscribed_Staging__c/fields/Subscriber_Profiling_Email__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Profiling_Email__c</fullName>
    <formula>Model_Subscribed__r.Model_Alert_Subscription__r.Account__r.PersonContact.Email</formula>
    <label>Subscriber Profiling Email</label>
    <type>Text</type>
</CustomField>