cncProd/force-app/main/default/objects/Model_Subscribed_Staging__c/fields/Used_Car_Vehicle_Stock__c.field-meta.xml
<CustomField>
    <fullName>Used_Car_Vehicle_Stock__c</fullName>
    <label>Used Car Vehicle Stock</label>
    <referenceTo>Used_Car_Vehicle_Stock__c</referenceTo>
    <relationshipLabel>Model Subscribed Staging</relationshipLabel>
    <relationshipName>Model_Subscribed_Staging</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>